--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mocha": "^4.0.1",
     "solc": "^0.4.19",
     "truffle-hdwallet-provider": "0.0.3",
-    "web3": "^1.0.0-beta.26"
+    "web3": "^1.0.0-beta.26",
+    "websocket": "^1.0.30"
   }
 }
