--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "ganache-cli": "^6.0.3",
+    "geoip-lite": "^1.3.8",
     "mocha": "^4.0.1",
+    "mongoose": "^5.7.7",
     "solc": "^0.4.19",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.26",
     "websocket": "^1.0.30"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
