--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "mocha",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build_contract": "node ethereum/compile.js",
+    "deploy_contract": "node ethereum/deploy.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "ganache-cli": "^6.0.3",
     "geoip-lite": "^1.3.8",
     "mocha": "^4.0.1",
